# data-assimilation

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
kalman/: README.md
kalman/an-cockrell-abm/: an-cockrell-ks-test-plots.py  an-cockrell-local-nbhds.py  an-cockrell-runner-sensitivity-individiual-params-slurm-job.sh  an-cockrell-runner-sensitivity-individiual-params.py  an-cockrell-sensitivity-runner.py  an-cockrell-sensitivity.py  cluster-3d.py  cluster-figure.py  cluster.py  consts.py  ekf.py  local-nbhd-statistics.hdf5  microstate-mod-comparison.ipynb  microstate-mod-viz.ipynb  microstate-synthesis.xopp  modify_epi_spatial.py  util.py  (+21 more)
phenotype-kalman/: README.md
phenotype-kalman/an-cockrell-abm/: README.md  an-cockrell-ks-test-plots.py  an-cockrell-local-nbhds.py  an-cockrell-sensitivity-runner.py  consts.py  ekf.py  local-nbhd-statistics.hdf5  modify_epi_spatial.py  modify_epi_spatial_test.py  modify_full_spatial.py  modify_full_spatial_test.py  plots-q-tuning.py  plots-r-tuning.py  pyproject.toml  run-simple-short.sh  run-simple.sh  run-spatial-short.sh  slurm-cyto-q-search-0.005.sh  slurm-cyto-r-search-00.01.sh  slurm-cyto-r-search-01.00.sh  slurm-cyto-r-search-10.00.sh  slurm-cytoev-r-search-00.10.sh  slurm-cytoev-r-search-01.00.sh  slurm-cytoev-r-search-10.00.sh  transform.py  up_plot.py
phenotype-kalman/an-cockrell-abm/phkf_ac/: __init__.py  modify_simple.py  transform.py  util.py
phenotype-kalman/an-cockrell-abm/src/phkf_ac/: __init__.py  consts.py  modify_epi_spatial.py  modify_epi_spatial_test.py  modify_full_spatial.py  modify_full_spatial_test.py  modify_simple.py  runner.py  transform.py  util.py
phenotype-kalman/an-cockrell-abm/src/phkf_ac/data/: full_phenotype_means.hdf5  log_phenotype_params.hdf5  phenotype-statistics.hdf5
strat-kalman/: README.md
(+77 files in other folders)
