[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "phkf_ac"
dynamic = ["version"]
authors = [
  { name="Adam C Knapp", email="adam.knapp@medicine.ufl.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
pruning = "phkf_ac:main_cli"


[project.urls]
Homepage = "https://github.com/knappa/data-assimilation"
Issues = "https://github.com/knappa/data-assimilation"