[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml,
# so you do NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
#mypkg = ["*.txt", "*.rst"]
phkf_ac = ["data/*"]

[tool.setuptools.exclude-package-data]
phkf_ac = [".gitattributes"]

[project]
name = "phkf_ac"
dynamic = ["version"]
authors = [
  { name="Adam C Knapp", email="adam.knapp@medicine.ufl.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
phkf-ac = "phkf_ac:main_cli"


[project.urls]
Homepage = "https://github.com/knappa/data-assimilation"
Issues = "https://github.com/knappa/data-assimilation"